--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,22 @@
 language: scala
+
 cache:
   directories:
+    - $HOME/.cache/coursier
     - $HOME/.ivy2/cache
     - $HOME/.sbt
     - $HOME/.cache/pip
     - $HOME/.cache/pyenv
+before_cache:
+  - rm -fv $HOME/.ivy2/.sbt.ivy.lock
+  - find $HOME/.ivy2/cache -name "ivydata-*.properties" -print -delete
+  - find $HOME/.sbt        -name "*.lock"               -print -delete
 
 install:
-  - pyenv install -s 3.6.3
-  - pyenv global 3.6.3
+  - pyenv install -s 3.7.1
+  - pyenv global 3.7.1
   - pip install -r requirements.txt
+  - export LD_LIBRARY_PATH=$(python3-config --prefix)/lib
 
 script:
-  - export JEP_PATH="/opt/python/3.6.3/lib/python3.6/site-packages/jep"
-  - export LD_LIBRARY_PATH=$(python3-config --prefix)/lib
   - sbt test
