Add website build stage to Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,32 @@
 language: scala
 
-cache:
-  directories:
-    - $HOME/.cache/coursier
-    - $HOME/.ivy2/cache
-    - $HOME/.sbt
-    - $HOME/.cache/pip
-    - $HOME/.cache/pyenv
-before_cache:
-  - rm -fv $HOME/.ivy2/.sbt.ivy.lock
-  - find $HOME/.ivy2/cache -name "ivydata-*.properties" -print -delete
-  - find $HOME/.sbt        -name "*.lock"               -print -delete
+jobs:
+  include:
+    - name: "Tests"
+      cache:
+        directories:
+          - $HOME/.cache/coursier
+          - $HOME/.ivy2/cache
+          - $HOME/.sbt
+          - $HOME/.cache/pip
+          - $HOME/.cache/pyenv
+      before_cache:
+        - rm -fv $HOME/.ivy2/.sbt.ivy.lock
+        - find $HOME/.ivy2/cache -name "ivydata-*.properties" -print -delete
+        - find $HOME/.sbt        -name "*.lock"               -print -delete
 
-install:
-  - pyenv install -s 3.7.1
-  - pyenv global 3.7.1
-  - pip install -r requirements.txt
-  - export LD_LIBRARY_PATH=$(python3-config --prefix)/lib
+      install:
+        - pyenv install -s 3.7.1
+        - pyenv global 3.7.1
+        - pip install -r requirements.txt
+        - export LD_LIBRARY_PATH=$(python3-config --prefix)/lib
 
-script:
-  - sbt test
+      script:
+        - sbt test
+
+    - name: "Website"
+      install:
+        - cd website
+        - npm install
+      script:
+        - npm run build
