--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,8 @@ jobs:
         - rm -fv $HOME/.ivy2/.sbt.ivy.lock
         - find $HOME/.ivy2/cache -name "ivydata-*.properties" -print -delete
         - find $HOME/.sbt        -name "*.lock"               -print -delete
-
+      before_install:
+        - git fetch --tags
       install:
         - pyenv install -s 3.7.1
         - pyenv global 3.7.1
@@ -38,3 +39,6 @@ jobs:
         github_token: $GITHUB_TOKEN
         on:
           branch: master
+      
+      - stage: release
+        script: sbt ci-release
