--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,6 @@ jobs:
         - rm -fv $HOME/.ivy2/.sbt.ivy.lock
         - find $HOME/.ivy2/cache -name "ivydata-*.properties" -print -delete
         - find $HOME/.sbt        -name "*.lock"               -print -delete
-      before_install:
-        - git fetch --tags
       install:
         - pyenv install -s 3.7.1
         - pyenv global 3.7.1
@@ -41,4 +39,7 @@ jobs:
           branch: master
       
       - stage: release
+        name: "Release library"
+        before_install:
+          - git fetch --tags
         script: sbt ci-release
