--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,15 @@ jobs:
 
     - stage: deploy
       name: "Release library"
+      cache:
+        directories:
+          - $HOME/.cache/coursier
+          - $HOME/.ivy2/cache
+          - $HOME/.sbt
+      before_cache:
+        - rm -fv $HOME/.ivy2/.sbt.ivy.lock
+        - find $HOME/.ivy2/cache -name "ivydata-*.properties" -print -delete
+        - find $HOME/.sbt        -name "*.lock"               -print -delete
       before_install:
         - git fetch --tags
       script: sbt ci-release
