Fix website build stage
Travis CI's linting tool marks skip_cleanup as deprecated with dpl v2.
However, dpl v1 is still being used. The field is therefore still
required, despite the lint warning.

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,7 @@ jobs:
         - touch build/.nojekyll
       deploy:
         provider: pages
+        skip_cleanup: true
         local_dir: website/build/tf-dotty
         github_token: $GITHUB_TOKEN
         on:
