Upgrade TensorFlow to 1.15.2
Closes #2, #5

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,19 @@
-absl-py==0.8.1
-astor==0.8.0
-gast==0.3.2
-google-pasta==0.1.7
-grpcio==1.24.3
+absl-py==0.9.0
+astor==0.8.1
+gast==0.2.2
+google-pasta==0.1.8
+grpcio==1.27.2
 h5py==2.10.0
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
-Markdown==3.1.1
-numpy==1.16.4
-protobuf==3.10.0
-six==1.12.0
-tensorboard==1.14.0
-tensorflow==1.14.0
-tensorflow-estimator==1.14.0
+Markdown==3.2.1
+numpy==1.18.1
+opt-einsum==3.1.0
+protobuf==3.11.3
+six==1.14.0
+tensorboard==1.15.0
+tensorflow==1.15.2
+tensorflow-estimator==1.15.1
 termcolor==1.1.0
-Werkzeug==0.16.0
-wrapt==1.11.2
+Werkzeug==1.0.0
+wrapt==1.12.0
