--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ jobs:
       install:
         - pyenv install -s 3.7.1
         - pyenv global 3.7.1
+        - pip install --upgrade pip
         - pip install -r requirements.txt
         - export LD_LIBRARY_PATH=$(python3-config --prefix)/lib
       script:
